--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -3,7 +3,11 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
+    -moz-background-size: 100% 100%;
+    -webkit-background-size: 100% 100%;
+    -o-background-size: 100% 100%;
+    background-size: 100% 100%;
     background: rgba(0, 0, 0, .5);
     display: flex;
     justify-content: center;
@@ -11,8 +15,15 @@
 }
 
 .inner {
+    position: relative;
     background: white;
     border: 1px solid #777;
     border-radius: 15px;
-    padding: 40px;
+    padding: 50px 40px 40px;
+}
+
+.close {
+    position: absolute;
+    right: 20px;
+    top: 20px;
 }
